Remove ambiguous API with mutli-island.